# swarm-autonomy

./: .gitignore  LICENSE  README.md  conftest.py  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  benchmarks.md  design-decisions.md  engineering-notes.md  sim-to-real.md
experiments/: README.md  control_compare.py  coop_exploration.py  fit_camera_extrinsic.py  make_figures.sh  plan_among_buildings.py  swarm_autonomy_style.py  vio_stereo_handover.py
experiments/data/: vio_handover.csv
ros2_ws/src/swarm_autonomy_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/swarm_autonomy_bringup/config/: drone_params.yaml
ros2_ws/src/swarm_autonomy_bringup/launch/: multi_drone.launch.py  single_drone.launch.py
ros2_ws/src/swarm_autonomy_comms/: package.xml  setup.cfg  setup.py
ros2_ws/src/swarm_autonomy_comms/swarm_autonomy_comms/: comms_middleware.py  link_model.py
ros2_ws/src/swarm_autonomy_comms/test/: test_link_model.py
ros2_ws/src/swarm_autonomy_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/swarm_autonomy_control/swarm_autonomy_control/: offboard_control.py  pid.py  px4_frames.py
ros2_ws/src/swarm_autonomy_control/test/: conftest.py  test_pid.py  test_px4_frames.py
ros2_ws/src/swarm_autonomy_coordination/: package.xml  setup.cfg  setup.py
ros2_ws/src/swarm_autonomy_coordination/swarm_autonomy_coordination/: cbba.py  coordination_node.py  mpc_pursuit.py  pursuit.py  swarm_control.py  target_tracker.py
ros2_ws/src/swarm_autonomy_coordination/test/: test_cbba.py  test_mpc_pursuit.py  test_pursuit.py  test_swarm_control.py  test_target_tracker.py
ros2_ws/src/swarm_autonomy_mapping/: package.xml  setup.cfg  setup.py
ros2_ws/src/swarm_autonomy_mapping/swarm_autonomy_mapping/: esdf.py  frontier.py  grid_io.py  map_merge_node.py  merge.py
ros2_ws/src/swarm_autonomy_mapping/test/: test_esdf.py  test_frontier.py  test_grid_io.py  test_merge.py
ros2_ws/src/swarm_autonomy_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_autonomy_msgs/msg/: CommsStats.msg  DroneRole.msg  MapDelta.msg  NeighborPose.msg  TargetObservation.msg  TaskBid.msg
ros2_ws/src/swarm_autonomy_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/swarm_autonomy_perception/swarm_autonomy_perception/: blob_detector.py  target_detector.py  vio_alignment.py  vio_to_ekf2_bridge.py
ros2_ws/src/swarm_autonomy_perception/test/: test_blob_detector.py  test_vio_alignment.py
ros2_ws/src/swarm_autonomy_planning/: package.xml  setup.cfg  setup.py
ros2_ws/src/swarm_autonomy_planning/swarm_autonomy_planning/: planner.py  planner_node.py
ros2_ws/src/swarm_autonomy_planning/test/: test_planner.py
scripts/: setup.sh
sim/: README.md  benchmarks.py  launch_sim.sh  run_sim.py
sim/px4_params/: ekf2_gps_denied.params
sim/rviz/: swarm_autonomy_pursuit.rviz  swarm_autonomy_vio.rviz
sim/scripts/: gazebo_pursuit.py  gazebo_pursuit_vision.py  render_pursuit.py  run_px4_swarm.sh  swarm_mission.py  swarm_takeoff.py  vio_demo.sh  vio_fly.py  vio_to_px4.py  vision_detect.py
sim/swarm_sim/: __init__.py  _bootstrap.py  drone.py  evader.py  render.py  simulator.py  world.py
sim/swarm_sim/test/: test_simulator.py
sim/worlds/: README.md  gen_city.py  swarm_autonomy_city.sdf  swarm_autonomy_vio.sdf
