<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swarm_autonomy_control</name>
  <version>0.0.0</version>
  <description>PX4 offboard position controller (geometric/PID) and waypoint following.</description>
  <maintainer email="manasreddyarumalla@gmail.com">Swarm Autonomy</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <!-- px4_msgs is provided by the px4_ros_com overlay (scripts/setup.sh) -->
  <exec_depend>px4_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
